--- a/app/styles/app/modules/tiles.sass
+++ b/app/styles/app/modules/tiles.sass
@@ -14,7 +14,6 @@
   background-color: $cream-light
   p
     margin: 0
-    white-space: nowrap
   .icon
     vertical-align: middle
   .icon--lang
@@ -133,10 +132,6 @@
     position: absolute
     bottom: 0
 
-
-// repo header
-.tile--repo
-
 // build history etc
 .tile--build
   .tile-main
@@ -151,10 +146,12 @@
       &:after
         @include fadeOut(right, -90deg, $cream-light)
     @media #{$xlarge-up}
-      @include grid-column(8)
+      @include grid-column(7)
   .tile-additional
+    p
+      white-space: nowrap
     @media #{$xlarge-up}
-      @include grid-column(4)
+      @include grid-column(5)
 
 p.tile-single-line
   padding: .7em 0
